amaroK Changelog
==================
(c) 2002, 2003 by Mark Kretschmann. GPL License.


  * add: tray menu
  * add: random mode
  * add: crossfading between tracks
  * add: vertical lines between columns in Playlist
  * add: alternating item colors in Playlist
  * add: column "directory" in PlaylistWidget (for Grue:)
  * add: sorting by clicking on column headers in PlaylistWidget
  * fix: rewrote directory reading code in BrowserWidget.cpp.
    code is now much more readable, and it also fixes a bug.
  * add: additional columns in playlist for tags
  * fix: made metainfo reading algorithm faster
  * change: switched to TagLib for metainfo reading
  * add: button "play" in PlayerWidget.cpp is now a toggleButton
  * add: tray icon
  * fix: playlist window is optionally hideable with main widget when iconified to tray

VERSION 0.6.0:
  * Release :)

VERSION 0.6.0-PRE5:
  * fixed: animated buttons don't get stuck anymore
  * fixed: invoking help
  * changed: MetaInfo reading now off by default. the slowdown was potentially
    confusing to new users
  * added: documentation
  * fixed: cleaned up Makefile.am a bit
  * fixed: defined new APP_VERSION macro, since the old approach did not work
    with CVS
  * changed: put amarok into KDE CVS (KDENONBETA)
  * added: applied Stormchaser's button patch. the AmarokButtons now work
    in a more standard conform way. Thanks Stormchaser, blessed be :)

VERSION 0.6.0-PRE4:
  * added: buttons in playlist window for play, pause, stop, next, prev.
    a.k.a. stakker mode :)
  * removed: "load" button. this functionality is now provided by "Add item"
  * added: more sanity checks on pointers
  * fixed: when track in playlist does not exist, we now skip to the next track
  * fixed: all aRts references are freed correctly at program exit
  * fixed: effects will not be forgotten any more when EffectWidget is closed

VERSION 0.6.0-PRE3:
  * fixed: crash when URLs were dropped onto filebrowser from other apps