@@ -3,6 +3,8 @@ amaroK Changelog
 (c) 2002, 2003 by Mark Kretschmann. GPL License.
 
 
+  * fix: dropping items into playlist
+  * add: drop-target indicator line in PlaylistWidget, providing visual feedback
   * add: tray menu
   * add: random mode
   * add: crossfading between tracks
